orthoMatrix, changes to visibilty, fixes
fixed matices, added ortho matrix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,5 @@ html, body {
 
 canvas {
         background-color: grey;
-        width: inherit;
-        height: inherit;
+        display: block;
 }
